fix canvas spacing

--- a/src/css/canvas.css
+++ b/src/css/canvas.css
@@ -2,6 +2,5 @@
   width: 100%;
   height: auto;
 
-  margin-top: 12px;
   border-radius: 4px;
 }
